--- a/base/main.css
+++ b/base/main.css
@@ -7,16 +7,17 @@ body {
     background-color: lightgrey;
     margin-left: auto;
     margin-right: auto;
-    display: block;
+    padding-bottom: 3px;
+    
 }
 
 
 #header {
-    overflow: hidden;
-    padding: 0px;
-    height: 64px;
-    background-color: #444
+    background-color: #444;
+    position: relative;
+    height: 60px;
 }
+
 #title {
     float: left;
     width: 30%;
@@ -25,24 +26,28 @@ body {
     font-size: 14px;
     line-height: 0.5;
     
-    height: 100%;
     
     padding-left: 5px;
     padding-right: 5px;
     text-align: left;
+    position: absolute;
+    bottom: 0;
+    height: 100%;
     
 }
 
 #navbox {
-    height: 100%;
     float: right;
     width: 60%;
+    position: absolute;
+    left: 40%;
+    bottom: -3px;
+    margin-right: 30%;
 }
 
 #navbox img {
-    margin: 0;
-    height: 100%;
-    
+    max-width: 20%;
+    min-width: 70px;
     
 }
 
@@ -65,15 +70,19 @@ ul {
 }
 
 .portfolio {
-    overflow-y: scroll;
+    overflow-y: auto;
     background-image: url(images/bg3.png);
     background-repeat: no-repeat;
     background-color: black ;
     margin: 10px;
-    height: 532px ;
+    padding:10px;
+    height: 532px;
+    
 }
 
+
 .portfolio ul li {
+    position: relative;
     float: left;
     width: 190px; 
     height: 230px;
@@ -91,7 +100,7 @@ ul {
 
 
 .blog {
-    overflow-y: scroll;
+    overflow-y: auto;
     background-image: url(images/bg2.png);
     background-repeat: no-repeat;
     background-color: black ;
@@ -99,6 +108,28 @@ ul {
     height: 532px 
     
 }
+
+
+.blog ul li {
+    position: relative;
+    float: left;
+    width: 45%; 
+    height: 200px;
+    margin: 1%;
+    background-color: white;
+    opacity: 0.8;
+}
+
+.blog ul li>div img {
+    width: 25%;
+    float: left;
+    margin-right: 10px;
+}
+
+.blog>ul>li>div>div {
+    padding: 10px;
+}
+
 
 #last_project_thumbnail {
     width: 90%;
@@ -114,8 +145,7 @@ ul {
     color: whitesmoke;
     overflow: auto;
     margin: 10px;
-    margin-bottom: 100px;
-    display: block;
+
     
 }
 
@@ -136,17 +166,44 @@ ul {
 #index {
     position: relative;
     background-image: url(images/bg1.png);
-    height: 532px;
+    height: 510px;
+    margin: 10px;
+    padding:10px;
+
+    
 }
 
 #index>div{
     position: relative;
-    top: 5%;
-    left: 3%;
+    top: 2%;
+    left: 2%;
     
     color: white;
     background-color: rgba(0,0,0,0.3);
-    min-width: 300px;
+    width: 40%;
     height: 90%;
+    overflow-y: auto;
+    padding: 10px; 
     
+}
+
+#contactform {
+    position: relative;
+    background-image: url(images/bg4.png);
+    height: 510px;
+    margin: 10px;
+    padding:10px;
+}
+
+#contactform>div {
+     position: relative;
+    top: 2%;
+    left: 2%;
+    
+    color: white;
+    background-color: rgba(0,0,0,0.3);
+    width: 40%;
+    height: 90%;
+    overflow-y: auto;
+    padding: 10px;
 }
