Fixed the contactus, added links for navbar

--- a/base/main.css
+++ b/base/main.css
@@ -3,6 +3,7 @@ body {
 }
 
 #root {
+    position:relative;
     max-width: 1000px;
     background-color: lightgrey;
     margin-left: auto;
@@ -130,6 +131,58 @@ ul {
     padding: 10px;
 }
 
+#index>div{
+    position: relative;
+    top: 2%;
+    left: 2%;
+    
+    color: white;
+    background-color: rgba(0,0,0,0.3);
+    width: 40%;
+    height: 90%;
+    overflow-y: auto;
+    padding: 10px; 
+    
+}
+
+#contactform {
+    position: relative;
+    background-image: url(images/bg4.png);
+    height: 510px;
+    margin: 10px;
+    padding:10px;
+}
+
+#contactform>#title2 {
+    position: float;
+    background-color: transparent;
+    height: auto;
+    line-height: 1;
+}
+
+#contactform>#title2 {
+    font-size: 250%;
+    background-color: rgba(0,0,0,0.3);
+}
+
+#contactform>div { 
+    float: left;
+    color: white;
+   
+    width: 45%;
+    height: 75%;
+    padding: 10px;
+    margin: 10px;
+}
+
+.form {
+    background-color: rgba(0,0,0,0.3);
+    clear: left;
+}
+
+.contact_info {
+    background-color: rgba(255,255,255,0.3);
+}
 
 #last_project_thumbnail {
     width: 90%;
@@ -167,6 +220,7 @@ ul {
 #index {
     position: relative;
     background-image: url(images/bg1.png);
+    background-position: center;
     height: 510px;
     margin: 10px;
     padding:10px;
@@ -174,37 +228,14 @@ ul {
     
 }
 
-#index>div{
-    position: relative;
-    top: 2%;
-    left: 2%;
-    
-    color: white;
-    background-color: rgba(0,0,0,0.3);
-    width: 40%;
-    height: 90%;
-    overflow-y: auto;
-    padding: 10px; 
-    
-}
 
-#contactform {
-    position: relative;
-    background-image: url(images/bg4.png);
-    height: 510px;
-    margin: 10px;
-    padding:10px;
-}
 
-#contactform>div {
-     position: relative;
-    top: 2%;
-    left: 2%;
-    
-    color: white;
-    background-color: rgba(0,0,0,0.3);
-    width: 40%;
-    height: 90%;
-    overflow-y: auto;
-    padding: 10px;
+
+
+
+
+
+#contactform textarea {
+    width: 95%;
+    text-shadow: "message";
 }
