--- a/base/main.css
+++ b/base/main.css
@@ -66,11 +66,12 @@ ul {
 .portfolio {
     overflow-y: auto;
     background-image: url(images/bg3.png);
+    background-position: center;
     background-repeat: no-repeat;
     background-color: black ;
     margin: 10px;
     padding:10px;
-    height: 532px;
+    height: 515px;
     
 }
 
@@ -96,10 +97,12 @@ ul {
 .blog {
     overflow-y: auto;
     background-image: url(images/bg2.png);
+    background-position: center;
     background-repeat: no-repeat;
     background-color: black ;
     margin: 10px;
-    height: 532px ;
+    height: 515px;
+    padding: 10px;
     
 }
 
@@ -124,6 +127,15 @@ ul {
     padding: 10px;
 }
 
+#index {
+    position: relative;
+    background-image: url(images/bg1.png);
+    background-position: center;
+    height: 515px;
+    margin: 10px;
+    padding:10px;
+}
+
 #index>div{
     position: relative;
     top: 2%;
@@ -131,7 +143,8 @@ ul {
     
     color: white;
     background-color: rgba(0,0,0,0.3);
-    width: 40%;
+    max-width: 35%;
+    min-width: 270px;
     height: 90%;
     overflow-y: auto;
     padding: 10px; 
@@ -141,7 +154,9 @@ ul {
 #contactform {
     position: relative;
     background-image: url(images/bg4.png);
-    height: 510px;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 515px;
     margin: 10px;
     padding:10px;
 }
@@ -216,16 +231,7 @@ ul {
     max-width: 50%;
 }
 
-#index {
-    position: relative;
-    background-image: url(images/bg1.png);
-    background-position: center;
-    height: 510px;
-    margin: 10px;
-    padding:10px;
 
-    
-}
 
 
 
