--- a/base/main.css
+++ b/base/main.css
@@ -19,13 +19,12 @@ body {
     height: 60px;
 }
 
-#title {
+#title { 
     float: left;
     width: 30%;
     background-color: lightgrey;
     
     font-size: 14px;
-    line-height: 0.5;
     
     
     padding-left: 10px;
@@ -34,10 +33,11 @@ body {
     position: absolute;
     bottom: 0;
     height: 100%;
+    margin-top: 100px;
     
 }
 
-#title h1 {
+#title h1 { 
     text-decoration: none;
     color: #666666;
     font-variant: small-caps;    
@@ -45,18 +45,40 @@ body {
 
 
 #navbox {
-    float: right;
-    min-width: 60%;
-    position: absolute;
-    left: 40%;
+    position:absolute;
+    left: 35%;
     bottom: -3px;
-    margin-right: 30%;
+    width: 55%;
+
 }
 
-#navbox img {
-    max-width: 20%;
-    min-width: 70px;
+#navbox1 img {
+    min-width: 80px;
+    max-height:50px;
+
     
+}
+
+#navbox2 img {
+    min-width: 80px;
+    max-height:50px;
+
+    
+}
+
+#navbox1 {
+    float:left;
+    margin-right: 5px;
+
+
+}
+
+#navbox2 {
+    float:left;
+
+
+
+
 }
 
 ul {
@@ -237,11 +259,7 @@ ul {
     
 }
 
-#footer>div {
-    float: left;
-    width: 23%;
-    margin: 1%;
-}
+
 
 #about img {
     width: 15%;
@@ -271,16 +289,140 @@ a {
 }
 
 
-@media screen and (min-width:768) and (max-width:1023px) {
+@media screen and (min-width:1024px) {
+    #footer>div {
+        float: left;
+        width: 23%;
+        margin: 1%;
+    }
+}
+
+
+@media screen and (min-width:768px) and (max-width:1023px) {
     
+    #navbox img {
+        min-width: 55px;
+        max-width: 20%;
+        max-height:50px;
+    }
+    
+    #footer>div {
+        float: left;
+        width: 23%;
+        margin: 1%;
+    }
+    
+
 }
 
 
 @media screen and (min-width:480px) and (max-width:767px) {
+    #title {
+        font-size:0.7em;
+        margin-top:20px;
+    }
+
     
+    #navbox {
+        left:40%;
+    }
+    
+    #navbox img {
+        min-width: 55px;
+        max-width: 30%;
+    }
+    
+    #address {
+        float: left;
+        width:45%;
+        height: 280px;
+        margin: 10px;
+    }
+    
+    #about {
+        float: right;
+        width: 45%;
+        height: 280px;
+        margin: 10px;
+    }
+    
+    #last_post {
+        float: left;
+        width:45%;
+        margin: 10px;
+    }
+    
+    #last_project {
+        float:right;
+        width:45%;
+        margin: 10px;
+    }
+    
+    #about img {
+        width: 10%;
+    
+    }
+
+    #address img{
+        max-width: 30%;
+    }
+    
+    #last_project img {
+        width:50%;
+    }
 }
 
 @media screen and (min-width:0px) and (max-width:479px) {
-    .form{}
+    #title {
+            font-size:0.6em;
+            margin-top:20px;
+    }
+    #navbox img {
+        min-width: 55px;
+        max-width: 20%;
+    }
+    
+    #navbox {
+        left:40%;
+    }
+    
+    #address {
+        float: left;
+        width:40%;
+        height: 360px;
+        margin: 10px;
+    }
+    
+    #about {
+        float: right;
+        width: 40%;
+        height: 360px;
+        margin: 10px;
+    }
+    
+    #last_post {
+        float: left;
+        width:40%;
+        margin: 10px;
+    }
+    
+    #last_project {
+        float:right;
+        width:40%;
+        margin: 10px;
+    }
+    
+    #about img {
+        width: 15%;
+    
+    }
+
+    #address img{
+        max-width: 40%;
+    }
+    
+    #last_project img {
+        width:50%;
+    }
     
 }
