--- a/base/main.css
+++ b/base/main.css
@@ -76,9 +76,6 @@ body {
 #navbox2 {
     float:left;
 
-
-
-
 }
 
 ul {
@@ -165,8 +162,6 @@ ul {
     
     color: white;
     background-color: rgba(0,0,0,0.3);
-    max-width: 35%;
-    min-width: 270px;
     height: 90%;
     overflow-y: auto;
     padding: 10px; 
@@ -289,12 +284,20 @@ a {
 }
 
 
+
+
+
 @media screen and (min-width:1024px) {
     #footer>div {
         float: left;
         width: 23%;
         margin: 1%;
     }
+    
+    #index>div {
+        max-width:35%;
+    }
+    
 }
 
 
@@ -310,6 +313,10 @@ a {
         float: left;
         width: 23%;
         margin: 1%;
+    }
+    
+    #index>div {
+        max-width:45%;
     }
     
 
@@ -370,6 +377,11 @@ a {
     #last_project img {
         width:50%;
     }
+    
+    #index>div {
+        max-width:90%;
+    }
+    
 }
 
 @media screen and (min-width:0px) and (max-width:479px) {
@@ -388,28 +400,28 @@ a {
     
     #address {
         float: left;
-        width:40%;
-        height: 360px;
-        margin: 10px;
+        width:80%;
+
+        margin: 10%;
     }
     
     #about {
-        float: right;
-        width: 40%;
-        height: 360px;
-        margin: 10px;
+        float: left;
+        width: 80%;
+
+        margin: 10%;
     }
     
     #last_post {
         float: left;
-        width:40%;
-        margin: 10px;
+        width:80%;
+        margin: 10%;
     }
     
     #last_project {
-        float:right;
-        width:40%;
-        margin: 10px;
+        float:left;
+        width:80%;
+        margin: 10%;
     }
     
     #about img {
@@ -424,5 +436,10 @@ a {
     #last_project img {
         width:50%;
     }
+    
+    #index>div {
+        max-width:90%;
+    }
+    
     
 }
