--- a/base/main.css
+++ b/base/main.css
@@ -469,3 +469,33 @@ footer article {
     }
     
 }
+
+#menu {
+    position: absolute;
+    left: 100px;
+    top: 10px;
+    z-index: 1;
+    border-radius: 40px;
+    padding: 40px;
+    background-color: hotpink;
+    box-shadow: 29px 10px 5px 0px rgba(0,0,0,0.75);
+    border-color: black;
+    border: 1px solid black;
+    
+}
+
+#menu .top {
+    margin-bottom: -4px;
+}
+
+#more {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    
+    width: 60px;
+    height: 60px;
+    padding: -10px;
+    margin:-10px;
+    
+}
