--- a/base/main.css
+++ b/base/main.css
@@ -508,10 +508,20 @@ footer article {
     left:50px;
     top:-3px;
     
+    width: 35px;
+    height: 35px;
+    
 }
 #sticky img{
     width:25px;
     height:25px;
+}
+
+#sticky[class=active] {
+    background-image: url(images/Materials2.2/sticky_icon_on.png);
+}
+#sticky {
+    background-image: url(images/Materials2.2/sticky_icon_off.png);
 }
 /*
 @keyframes wiggle {
@@ -547,13 +557,9 @@ footer article {
     
 }
 
-#menu .active {
-    
-    background-image: url(images/Materials2.2/sticky_icon_on.png);
-}
-#menu .active img {
-    display:none;
-}
+
+
+
 
 .fade {
    opacity: 0.5;
